ingress.yaml
# create ingress for frontend-proxy-servcie
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy
  namespace: frontend-proxy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  spec:
    ingressClassName: alb
    rules:
      - hosts: "example.com"
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: frontend-proxy
                  port:
                    number: 8080
